--- a/server/package.json
+++ b/server/package.json
@@ -25,5 +25,8 @@
 		"passport": "^0.4.1",
 		"passport-google-oauth20": "^2.0.0",
 		"stripe": "^8.129.0"
+	},
+	"devDependencies": {
+		"eslint": "^7.16.0"
 	}
 }
